@@ -1,3 +1,15 @@
+2004-07-11  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* java/awt/Component.java (deliverEvent): Implement.
+	(postEvent): Implement.
+	(handleEvent): Implement.
+	(translateEvent): New method.
+	(dispatchEventImpl): Document.  Add AWT 1.0 event handling.
+	* java/awt/Container.java (deliverEvent): Implement.
+	* java/awt/Event.java (paramString): Fix formatting.
+	* java/awt/Font.java (toString): Likewise.
+	* java/awt/Window.java (postEvent): Implement.
+
 2004-07-10  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* java/awt/DefaultKeyboardFocusManager.java (dispatchEvent):
